--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "framer-motion": "^12.4.9",
+    "jspdf": "3.0.1",
+    "jspdf-autotable": "5.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
