--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.4.9",
+    "idb": "^8.0.2",
     "jspdf": "3.0.1",
     "jspdf-autotable": "5.0.2",
     "jwt-decode": "^4.0.0",
